[package]
name = "example"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailjet-rs = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
