[package]
name = "mailjet-rs"
version = "0.1.1"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Mailjet API Client for Rust"
readme = "../README.md"
repository = "https://github.com/EstebanBorai/mailjet-rs"
categories = [
  "api-bindings",
  "email",
  "web-programming",
]

[lib]
name = "mailjet_rs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
http-auth-basic = "0.1.0"
hyper = "0.13"
hyper-tls = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
