[package]
name = "mailjet-rs"
version = "0.3.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Mailjet API wrapper for Rust"
readme = "../README.md"
repository = "https://github.com/EstebanBorai/mailjet-rs"
categories = [
  "api-bindings",
  "email",
  "web-programming",
]

[lib]
name = "mailjet_rs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
http-auth-basic = "0.3"
hyper = { version = "0.14", features = ["http2"] }
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version="0.23", features = ["http2", "webpki-roots"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["hyper-tls"]
rustls = ["hyper-rustls"]