[package]
name = "basic_email_v3"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mailjet-rs = { path = "../../lib" }
tokio = { version = "0.2", features = ["full"] }
